HelloUltraviolet/Fixtures/RejectedSource/Comptime/QuoteOutsideComptime/Source/Main.uv
//! Rejected compile-time specimen for quote use outside Phase 2.

public procedure quoteOutsideComptimeReference() -> i32 {
    let ast = quote { 1 + 2 }
    return 0
}
